assets/css/style.css
/* ... */
header {
    background-color: #FFFFFF;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    box-shadow: 0 2px 2px #3a3a3a;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

/* Nav toggle, adapted from Code Institute's "Love Running" project */

nav {
    position: absolute;
    background-color: #FFFFFF;
    width: 100%;
    left: 0;
    right: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
    top: 100%;
    padding-bottom: 10px;
}

#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* ID selector below styles navigation bar drop down menu - keeping at top of stylesheet near nav selectors */
#navigation {
    font-size: 110%;
    letter-spacing: 1px;
    list-style-type: none;
    text-decoration: none;
}

/* ID selector below styles navigation bar drop down list - keeping at top of style sheet near nav selector */
#navigation li {
    font-size: 110%;
    padding-top: 10px;
}

main {
    /* Make main content take up extra space - push footer down */
    flex: 1 0 auto;
    /* Make content visible by pushing it below the header */
    margin-top: 58.5px;
    display: flex;
    flex-direction: column;
    overflow-y: auto;

}

footer {
    height: 90px;
    background-color: rgba(71, 108, 70, 1);
    color: antiquewhite;
    padding-top: 20px;
    padding-left: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-right: 10px;
}

/* Styling social media icons from Font Awesome */
.fa-brands {
    text-align: center;
    text-decoration: none;
    color: antiquewhite;
    text-decoration: none;
    padding: 5px;
    font-size: 25px;
}

/* Styling flex content on index.html */
.flexcontent {
    display: flex;
    flex-direction: column;
    font-size: larger;
    text-align: center;
}

/* Styling form class */
.form {
    display: flex;
    flex-direction: column;
    width: 70vw;
    text-align: center;
}

/* Styling form labels */
.formlabel {
    padding-top: 5px;
    font-size: 20px
}

/* Set background image for contactus.html */
.contactformimage {
    background: url(../images/compressed-contactusimage.webp) no-repeat center/cover;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: auto;
    width: auto;
}

/* Styles the div containing form on contactus.html */
.contactformbox {
    background-color: rgba(71, 108, 70, 0.8);
    color: antiquewhite;
    margin: 20px;
    height: auto;
    width: 95vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 3%;
    padding-top: 30px;
    padding-bottom: 30px;
    justify-content: space-evenly;
}

.contactformbox p {
    display: flex;
    justify-content: flex-start;
}

.googlemap {
    height: auto;
    width: auto;
}

/* Styles the submit button on signup.html and contactus.html */
.submitbutton {
    color: antiquewhite;
    background-color: rgba(71, 108, 70, 0.8);
    margin-top: 10px;
    padding: 5px;
    width: 25vw;
    font-weight: bolder;
}

/* Sets blog div to display contents in a column */
.blog {
    margin: 25px auto;
}

/* Removes hyperlink styling and sets uniform size to images */
.blogimg {
    text-decoration: none;
    max-height: 313px;
    max-width: 313px;
    margin-bottom: 50px;
}

.blogpost {
    height: auto;
    width: 25vw;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: center;
    background-color: rgba(71, 108, 70, 0.8);
    color: antiquewhite;
    padding: 10px;
    margin-bottom: 25px;
}

/* Styling text box in blog link images */
.blogtitletext {
    height: fit-content;
    background-color: rgba(71, 108, 70, 0.8);
    color: antiquewhite;
    display: flex;
    font-size: 1.5rem;
    margin-bottom: 30px;
    text-align: center;
}

.blogtitletext h3 {
    font-size: smaller;
}

/* Styling images and setting image filepaths */
.blog1 {
    background: url(../images/blogimages/didimikrakhuna.webp) no-repeat center/cover;
    height: 350px;
    width: 100%;
    max-width: 350px;
}

.blog2 {
    background: url(../images/blogimages/vinaterosbravos.webp) no-repeat bottom/cover;
    height: 350px;
    width: 100%;
    max-width: 350px;
}

.blog3 {
    background: url(../images/blogimages/nuitd.webp) no-repeat bottom/cover;
    height: 350px;
    width: 100%;
    max-width: 350px;
}

.blog4 {
    background: url(../images/blogimages/raiz.webp) no-repeat bottom/cover;
    height: 350px;
    width: 100%;
    max-width: 350px;
}

/* Blog page title */
.blogpagetitle {
    background-color: rgba(71, 108, 70, 0.8);
    color: antiquewhite;
    height: fit-content;
    border-radius: 5px;
    margin: 0 auto;
}

/* Centres title on blog pages */

.blogpagetitle>h3 {
    text-align: center;
}

.blogtext {
    margin: 25px auto;
    width: 85vw;
}

/* Styling blog page header image */
#blogpage1 {
    background: url(../images/blogimages/didimikrakhuna2.webp) no-repeat center/cover;
    height: 50vh;
    width: 100%;
    display: flex;
    align-items: flex-end;
    padding: 15px;
}

#blogpage2 {
    background: url(../images/blogimages/vinaterosbravos.webp) no-repeat center/cover;
    height: 50vh;
    width: 100%;
    display: flex;
    align-items: flex-end;
    padding: 15px;
}

#blogpage3 {
    background: url(../images/blogimages/nuitd.webp) no-repeat bottom/cover;
    height: 50vh;
    width: 100%;
    display: flex;
    align-items: flex-end;
    padding: 15px;
}

#blogpage4 {
    background: url(../images/blogimages/raiz.webp) no-repeat center/cover;
    height: 50vh;
    width: 100%;
    display: flex;
    align-items: flex-end;
    padding: 15px;
}
/* ... */

